# SpecterPoint

./: .gitignore  Cargo.toml  LICENSE  README.md
agent/: Cargo.toml
agent/src/: main.rs
client/: .taurignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/migrations/: 20240726171634_specterpoint-client.up.sql
client/src/: globals.css  main.tsx  routeTree.gen.ts
client/src-tauri/: Cargo.toml  specterpoint-client.db  tauri.conf.json
client/src-tauri/icons/: icon.icns
client/src-tauri/migrations/: 20240726171634_specterpoint-client.down.sql  20240726171634_specterpoint-client.up.sql
client/src-tauri/src/: client.rs  httpclient.rs  main.rs  manager.rs  sqlite.rs  state.rs
client/src-tauri/src/handlers/: agent.rs  listener.rs  listeners.rs  login.rs  mod.rs  server.rs  user.rs
client/src-tauri/src/models/: mod.rs  state.rs  user.rs
client/src/components/: eventviewer.tsx  listener-form.tsx  navigation.tsx
client/src/components/agent/: item.tsx  page.tsx
client/src/components/configuration/: configuration-proxy.tsx
client/src/components/forms/: aws-server.form.tsx  listener-form.tsx  login-form.tsx  manual-server-form.tsx  schemas.tsx  setup-form.tsx
client/src/components/index/: form-login.tsx  form-setup.tsx  page.tsx
client/src/components/listener/: create.tsx  form-listener.tsx  item.tsx  page.tsx  types.tsx  view.tsx
client/src/components/pages/: index.tsx
client/src/components/provider/: events.tsx
client/src/components/server/: create.tsx  form-aws.tsx  form-manual.tsx  item.tsx  page.tsx  types.tsx  view.tsx
client/src/components/ui/: accordion.tsx  multi-badge.tsx  responsive-dialog.tsx  spinner.tsx  tabs.tsx  tanstack-form.tsx  terminal.tsx  textarea.tsx
client/src/hooks/: user-media-query.tsx
client/src/routes/: __root.tsx  _auth.tsx  blacklist.tsx  configuration.tsx  index.lazy.tsx  listeners.view.tsx  servers.create.tsx  servers.view.tsx  targets.tsx
client/src/routes/_auth/: agents.tsx  blacklist.tsx  configuration.tsx  listeners.view.tsx  servers.view.tsx  targets.tsx
client/src/types/: agent.tsx  endpoint.tsx  event.tsx  listener.tsx  server.tsx
common/: Cargo.toml
common/src/: error.rs  lib.rs
common/src/crypt/: aes.rs  hash.rs  mod.rs
common/src/db/: agent.rs  endpoint.rs  listener.rs  metadata.rs  mod.rs  server.rs  sqlite.rs  user.rs
common/src/models/: agent.rs  endpoint.rs  listener.rs  log.rs  message.rs  metadata.rs  mod.rs  server.rs  task.rs  user.rs
comms/: Cargo.toml
comms/src/: event.rs
comms/src/models/: agent.rs  config.rs  log.rs
eventlogs/: Cargo.toml
eventlogs/src/: communication.rs  event.rs  lib.rs
eventlogs/src/models/: agent.rs  message.rs  mod.rs
server/: Cargo.toml
server/migrations/: 20240809053653_specterpoint-server.sql
server/src/: app.rs  error.rs  main.rs  orchestrator.rs  subscriber.rs
server/src/api/: mod.rs
server/src/api/auth/: mod.rs  post.rs
server/src/api/listeners/: delete.rs  get.rs  mod.rs  post.rs
server/src/api/tasks/: get.rs  mod.rs  post.rs
server/src/api/users/: mod.rs  post.rs
server/src/auth/: get.rs  mod.rs  post.rs
server/src/db/: listener.rs  mod.rs  user.rs
server/src/handlers/: get.rs  mod.rs
server/src/handlers/agent/: post.rs
server/src/handlers/http/: get.rs  mod.rs  post.rs
server/src/listeners/: http.rs  https.rs  mod.rs  tcp.rs
server/src/managers/: listeners.rs  mod.rs  tasks.rs
server/src/models/: config.rs  listener.rs  mod.rs  state.rs
