[workspace]
members = ["client/src-tauri", "server", "agent", "common", "eventlogs"]

[workspace.dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "sqlite"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
async-trait = "0.1.81"
futures-util = { version = "0.3.30", features = ["sink"] }
chrono = "0.4.38"
rsa = "0.9.6"
common = { path = "./common" }
