[package]
name = "agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
rand = "0.8.5"
rsa = "0.9.6"
pem = "3.0.4"
base64 = "0.22.1"
reqwest = "0.12.7"
common = { path = "../common" }
