[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
sqlx.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
serde_json.workspace = true
tokio-util.workspace = true
rsa.workspace = true
chrono = "0.4.38"
argon2 = "0.5.3"
thiserror = "1.0.63"
aes-gcm = "0.10.3"
hex = "0.4.3"
axum = "0.7.5"
axum-login = "0.15.3"
reqwest = "0.12.7"
aes = "0.8.4"
cipher = "0.4.4"
