[package]
name = "comms"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
futures-util.workspace = true
chrono.workspace = true
tokio-stream = "0.1.15"
rand = "0.8.5"
tauri = "2.1.1"
envy = "0.4.2"
once_cell = "1.19.0"
common = { path = "../common" }
