[package]
name = "eventlogs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tokio-stream = "0.1.15"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
futures-util = { version = "0.3.30", features = ["sink"] }
once_cell = "1.19.0"
chrono = "0.4.38"
rand = "0.8.5"
tauri = "1.7.2"
envy = "0.4.2"
sqlx = "0.8.1"
common = { path = "../common" }
