[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
common.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
async-trait.workspace = true
futures-util.workspace = true
chrono.workspace = true
axum = { version = "0.7.5", features = ["macros"] }
axum-server = "0.7.1"
envy = "0.4.2"
axum-login = "0.15.3"
tokio-stream = "0.1.15"
tower-sessions-sqlx-store = { version = "0.13.0", features = ["sqlite"] }
tower-sessions = { version = "0.12.2", default-features = false, features = [
  "signed",
] }
eventlogs = { path = "../eventlogs" }
