[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
common.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sqlx.workspace = true
async-trait.workspace = true
futures-util.workspace = true
chrono.workspace = true
rsa.workspace = true
axum = { version = "0.7.5", features = ["macros"] }
axum-server = "0.7.1"
envy = "0.4.2"
axum-login = "0.16.0"
tokio-stream = "0.1.15"
base64 = "0.22.1"
tower-sessions-sqlx-store = { version = "0.14.2", features = ["sqlite"] }
tower-sessions = { version = "0.13.0", default-features = false, features = [
  "signed",
] }
pem = "3.0.4"
comms = { path = "../comms" }
