[package]
name = "client"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde.workspace = true
serde_json.workspace = true
common.workspace = true
tokio.workspace = true
sqlx.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "1", features = ["shell-open"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
futures-util = { version = "0.3.30", features = ["sink"] }
chrono = "0.4.38"
reqwest = { version = "0.12.7", features = ["json", "cookies"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
